<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:padding="16dp"
    tools:context="meimaonamassa.cashflow.feature.transaction.add.ui.TransactionAddFragment">

    <TextView
        android:id="@+id/text_payer_payee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_payer_payee"
        android:textColor="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_payer_payee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:labelFor="@id/edit_payer_payee"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_payer_payee" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_description"
        android:textColor="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_payer_payee" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_date"
        android:textColor="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_description" />

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="date"
        android:maxLength="10"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_date" />

    <TextView
        android:id="@+id/text_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_money"
        android:textColor="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_date" />

    <EditText
        android:id="@+id/edit_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="19"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_money" />

    <TextView
        android:id="@+id/text_transaction_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_transaction_type"
        android:textColor="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_money" />

    <RadioGroup
        android:id="@+id/group_radio_transaction_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_transaction_type">

        <RadioButton
            android:id="@+id/radio_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_income" />

        <RadioButton
            android:id="@+id/radio_expense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_expense" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/check_installment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_installment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_radio_transaction_type" />

    <LinearLayout
        android:id="@+id/layout_installments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/check_installment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toRightOf="@id/check_installment"
        app:layout_constraintTop_toTopOf="@id/check_installment">

        <EditText
            android:id="@+id/edit_installment_current"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="phone"
            android:hint="@string/edit_installment_current"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_installment_slash" />

        <EditText
            android:id="@+id/edit_installment_final"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_installment_final"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_category"
        android:textColor="#546E7A"
        app:layout_constraintTop_toBottomOf="@id/check_installment" />

    <RadioGroup
        android:id="@+id/group_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:divider="?android:attr/dividerVertical"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_category">

        <RadioButton
            android:id="@+id/radio_needs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/need_category_radio"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/radio_wants"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/wants_category_radio"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/radio_investments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/investments_category_radio"
            android:textSize="11sp" />
    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/button_save"
        app:layout_constraintTop_toBottomOf="@id/group_category" />

</androidx.constraintlayout.widget.ConstraintLayout>