<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/transactionFragment">

    <fragment
        android:id="@+id/transactionFragment"
        android:name="meimaonamassa.cashflow.feature.transaction.list.presentation.ui.TransactionFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_transaction">
        <action
            android:id="@+id/navigateToTransactionAddFragment"
            app:destination="@id/transactionAddFragment"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/navigateToTransactionDetailFragment"
            app:destination="@id/transactionDetailFragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/transactionAddFragment"
        android:name="meimaonamassa.cashflow.feature.transaction.add.ui.TransactionAddFragment"
        android:label="@string/transaction_add_fragment"
        tools:layout="@layout/fragment_transaction_add" />
    <fragment
        android:id="@+id/transactionDetailFragment"
        android:name="meimaonamassa.cashflow.feature.transaction.detail.ui.TransactionDetailFragment"
        android:label="@string/transaction_detail_fragment"
        tools:layout="@layout/fragment_transaction_detail">
        <argument
            android:name="transactionID"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>
</navigation>